# Webcam-Vitals-Tracker

./: README.md  Webcam Vitals Tracker.ipynb  Webcam_Vitals_Test.ipynb  campy_thermal_ppg.py  flask_vitals_tracker_webpage.py  webcam_stream.py
.ipynb_checkpoints/: Webcam Vitals Tracker-checkpoint.ipynb  Webcam_Vitals_Test-checkpoint.ipynb
Test_Run/: scam.py  simplepyserver.py  vitals.py
Test_Run/__MACOSX/cpp/: ._CMakeLists.txt  ._README.md  ._opencv_install_mac.sh
Test_Run/__MACOSX/cpp/src/: ._opencv_ex.cpp  ._vita.hpp
Test_Run/cpp/: CMakeLists.txt  README.md  opencv_install_mac.sh
Test_Run/cpp/src/: opencv_ex.cpp  vita.hpp
Test_Run/templates/: index.html
cam_app_demo/: cam_app.py
static/: main.css
static/css/: main.css
templates/: Basic.html  contact.html  dashboard.html  description.html  layout.html  updates.html  vitals.html  webcam2website.html
